--- a/src/components/Juego.css
+++ b/src/components/Juego.css
@@ -8,6 +8,17 @@ h1 {
   margin-bottom: 20px;
 }
 
+.tableros{
+  display: flex;
+  flex-direction: row;
+}
+
+.text-jugadores{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
 .board {
   display: grid;
   grid-template-columns: repeat(10, 40px); /* Ajusta el tamaño de las columnas según sea necesario */
@@ -25,11 +36,11 @@ h1 {
   justify-content: center;
   font-weight: bold;
   cursor: pointer;
-  background-color: #b81010;
+  background-color: #64a577;
 }
 
 .square:hover {
-  background-color: rgb(63, 152, 55); /* Cambia el color al pasar el ratón sobre el cuadrado */
+  background-color: rgb(93, 108, 111); /* Cambia el color al pasar el ratón sobre el cuadrado */
 }
 
 /* Puedes agregar más estilos según sea necesario */
